(feat)-(ABC-272)-Mobile with full items aligning correctly

--- a/src/modules/base/list/list.css
+++ b/src/modules/base/list/list.css
@@ -78,3 +78,8 @@ img {
     overflow: hidden;
     height: 100%;
 }
+
+.menu {
+    display: grid;
+    /* justify-content: center; */
+}
